--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,2 +1,2 @@
 $("#comment_<%= @comment.id %>").slideUp();
-$("#commentable_<%= @commentable.id %>_comments_size").text("<%= @commentable.comments.size %>").effect("highlight", {color: 'red'}, 3000);
+$("#commentable_<%= @commentable.id %>_comments_size").text("<%= @commentable.comments.size %>").effect("highlight", {}, 3000);
