--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,8 @@
 @import "jquery-ui";
 @import "posts";
 @import "comments";
-// @import "scaffolds";
 
+.container { padding-top: 2em; }
 
 // .btn-outline-primary,
 // .btn-outline-secondary,
