--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,3 +8,31 @@
   padding: 1em;
   margin-bottom: 2em;
 }
+
+
+.col-grid-1 { width: 8% }
+.col-grid-2 { width: 16% }
+.col-grid-3 { width: 24% }
+.col-grid-4 { width: 32% }
+.col-grid-5 { width: 40% }
+.col-grid-6 { width: 48% }
+.col-grid-7 { width: 56% }
+.col-grid-8 { width: 64% }
+.col-grid-9 { width: 72% }
+.col-grid-10 { width: 80% }
+.col-grid-11 { width: 88% }
+.col-grid-12 { width: 96% }
+
+.col-grid-1r { width: 12% }
+.col-grid-2r { width: 20% }
+.col-grid-3r { width: 28% }
+.col-grid-4r { width: 36% }
+.col-grid-5r { width: 44% }
+.col-grid-6r { width: 52% }
+.col-grid-7r { width: 60% }
+.col-grid-8r { width: 68% }
+.col-grid-9r { width: 76% }
+.col-grid-10r { width: 84% }
+.col-grid-11r { width: 92% }
+.col-grid-12r { width: 100% }
+.col-grid-r { width: 4% }
