--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,11 +3,10 @@
 <h1>Posts</h1>
 
 <table class='table'>
-  <thead>
+  <thead class='thead-default'>
     <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th colspan="3"></th>
+      <th class='col-grid-7'>Title</th>
+      <th class='col-grid-5r'>Data Actions</th>
     </tr>
   </thead>
 
@@ -15,10 +14,11 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Show', post %> |
+          <%= link_to 'Edit', edit_post_path(post) %> |
+          <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
